bookchart/templates/zookeeper-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-external-service
  labels:
    app: zookeeper
spec:
  selector:
    app: zookeeper
  type: LoadBalancer  # For internal access, use ClusterIP
  ports:
    - port: 2181  # External port (can be different from container port)
      targetPort: 2181
      protocol: TCP
