bookchart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /fakesmtp
            pathType: Prefix
            backend:
              service:
                name: fakesmtp
                port:
                  number: 25
          - path: /mysql
            pathType: Prefix
            backend:
              service:
                name: mysql
                port:
                  number: 3306
          - path: /redis
            pathType: Prefix
            backend:
              service:
                name: redis
                port:
                  number: 6379
          - path: /bookchart
            pathType: Prefix
            backend:
              service:
                name: bookchart
                port:
                  number: 8080
